--- a/style.css
+++ b/style.css
@@ -245,3 +245,33 @@ transform: rotate(-34.21deg);
     justify-content: space-between;
     gap: 45px;
 }
+
+/* Portfolio Section Styles */
+.portfolio-container{
+position: absolute;
+width: 1320px;
+height: 1163px;
+left: 140px;
+right: 140px;
+}
+.gifts{
+    color: rgb(255, 0, 0);
+font-size: 24px;
+font-weight: 500;
+}
+.portfolio-title{
+    color: rgb(7, 2, 17);
+font-size: 48px;
+font-weight: 900;
+margin-top: 16px;
+margin-bottom: 22px;
+}
+.portfolio-description{
+    color: rgba(7, 2, 17, 0.6);
+font-size: 20px;
+font-weight: 400;
+}
+.img-row{
+    display: flex;
+    justify-content: space-between;
+}
