--- a/style.css
+++ b/style.css
@@ -311,10 +311,22 @@ font-weight: 400;
 text-align: center;
 }
 .sub-div{
-    position: absolute;
+position: absolute;
+background: rgb(255, 255, 255);
+width: 648px;
+height: 72px;
+left: 476px;
+display: flex;
+}
+.input-sub{
+    position: relative;
+width: 648px;
+padding-left: 30px;
 }
 .submit{
-    position: relative;
+    border-radius: 0px 50px 50px 0px;
+    width: 300px;
+background: rgb(255, 0, 0);
 }
 
 /* Footer Section Styles */
